--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,34 @@
   </head>
   <body>
     <div id="app"></div>
+
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+
+        <script>
+          // Your web app's Firebase configuration
+          // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+          var firebaseConfig = {
+            apiKey: "AIzaSyAvD4W0yCqRzaRoTFP6wjQT7u5Ztv6mW9E",
+            authDomain: "splitdecision-4ea04.firebaseapp.com",
+            projectId: "splitdecision-4ea04",
+            storageBucket: "splitdecision-4ea04.appspot.com",
+            messagingSenderId: "591465165292",
+            appId: "1:591465165292:web:21dcfc8af26e122cef90c9",
+            measurementId: "G-58W5N1LBEN"
+          };
+          // Initialize Firebase
+          firebase.initializeApp(firebaseConfig);
+          firebase.analytics();
+        </script>
+
+
+
     <script type="text/javascript"  src="./bundle.js"></script>
   </body>
 </html>
